--- a/changelog
+++ b/changelog
@@ -1,24 +1,15 @@
 ### Added
 
-* `x-website` Github URLs in `.toc` files are now treated as a Github source that an addon can be switched to.
-    - when both `x-github` and Github `x-website` sources exist, `x-github` takes priority.
+* added support for Cataclysm Classic.
 
 ### Changed
 
-* moved AppImage building to `ogri-la/strongbox-appimage`.
-* consolidated all the `.sh` into a single `manage.sh` script.
-    - `lint.sh` moved to `manage.sh` as command 'lint'.
-    - `run-tests.sh` moved to `manage.sh` as command 'test'.
-    - `update-test-fixtures.sh` moved to `manage.sh` as command 'update-test-fixtures'.
-    - `build-linx-image.sh` moved to `ogri-la/strongbox-appimage` as `build-appimage.sh`.
+* dependencies bumped to latest versions.
+* game track priority when 'strict' is off now has a proper and consistent strategy.
 
 ### Fixed
 
-* fixed bug preventing classic Wrath `.toc` from being detected and loaded.
-* fixed bug in catalogue location spec where a value that should have been validating as a URL was not.
-* removed `x-tukui-id` source detection in `.toc` files. Tukui no longer hosts addons so these can't be used.
-    - overlooked, should have been part of 7.0.0 major version.
-
-### Removed
-
-* removed `release.sh` as it had been unused for several years.
+* bumps Clojure from 1.10 to 1.11.2 to fix CVE-2024-22871
+    - https://github.com/advisories/GHSA-vr64-r9qj-h27f
+* an Arch Linux AUR bug introduced with pacman 6.1 that stripped the binary down to nothing.
+    - thanks to @nickromanooo for reporting the bug and tracking down the pacman issue.
