--- a/changelog
+++ b/changelog
@@ -1,30 +1,30 @@
 ### Added
 
-* added support for parsing multiple interface version values from .toc file.
-    - a single .toc file may now yield multiple possible game tracks (retail, classic, wrath, etc).
-* added entries to the known patch list for the recent major Dragonflight patches and The War Within.
+* added another heuristic for guessing which asset in a Github release supports retail.
+    - in this case, if there is a single remaining unclassified asset, and there are other classified assets and nothing has been classified as retail yet, classify that asset as retail.
+        - yes, this is guessing, and it won't always be correct, but it's probably true most of the time.
+    - thanks @jake770321
+* error handling for a few cases where uncaught exceptions were being swallowed.
 
 ### Changed
 
-* the WoW column in the GUI now supports displaying multiple game versions (like 8.0, 9.0, 10.0).
-    - these are derived from interface versions (80000, 90000, 100000).
-* the raw data GUI widget in the addon details pane now supports displaying multiple interface versions.
-* replaced references to the old wiki with the new wiki (warcraft.wiki.gg).
-* bumped dependencies.
+* installing an addon by file now overwrites/updates ignored addons and unpins pinned addons.
+    - this accommodates a use case where Strongbox is used to install a select few addons manually from unsupported sources (like Curseforge) but then the new addons match against older versions in the catalogue from wowi.
+    - please open a feature request if you want this behaviour adjustable.
+* updated internal constants for The War Within.
+* updated internal constant for the date of the previous expansion.
+    - affects how much the emergency 'short' catalogue gets truncated from the 'full' catalogue.
+        - emergency catalogue is used when Github hosted catalogue is unavailable, which is rare.
+* trimmed the '(Flatpak)' from the 'Strongbox (Flatpak)' on the `.desktop` files distributed by Flatpak.
+    - thanks @deadmeu
 
 ### Fixed
 
-* fixed a typo in a field name in the import/export logic.
-* fixed a bug in the interface-version => game-version logic where 110000 was returned as '1.0.000' instead of '11.0.0'.
-
-### Removed
-
-* removed curseforge and tukui test fixtures and the fetching of test fixtures.
-* removed support for 'release labels' attached to addon source updates.
-    - only supported by curseforge and provided a friendlier label for a release than a version number.
-* removed more curseforge and tukui logic that was disabled many releases ago.
-* removed support for interface versions in .toc files containing non-numeric values.
-    - for example, "30008a" which used to parse to "3.0.8a".
-    - the interface version for these alpha and beta releases don't actually have 'a' and 'b' suffixes.
-        - https://warcraft.wiki.gg/wiki/Patch_3.0.8a
-        - https://warcraft.wiki.gg/wiki/Patch_8.1.0a
+* fixed bug in emergency 'short' catalogue generation.
+    - it would include addons from BFA instead of stopping at Shadowlands.
+* fixed bug where installing a file manually would bypass ignored and pinned addon checks.
+    - it would tell you it was refusing to install, then install it anyway.
+    - thanks @akanouras
+* fixed bug where ignore check bypassed on ungrouped/single directory addons.
+    - logic assumed all addons were grouped, but grouping only happens when an addon unzip to multiple directories.
+    - pretty big bug!
